--- a/projects/VS2013/Menge/MengeVis.vcxproj.filters
+++ b/projects/VS2013/Menge/MengeVis.vcxproj.filters
@@ -117,7 +117,13 @@
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VelCompContext.cpp">
       <Filter>Source Files\Runtime</Filter>
     </ClCompile>
-    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\BaseAgentContext.cpp">
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\AgentContext\BaseAgentContext.cpp">
+      <Filter>Source Files\Runtime\AgentContext</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\MengeContext.cpp">
+      <Filter>Source Files\Runtime</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\AgentContextDatabase.cpp">
       <Filter>Source Files\Runtime\AgentContext</Filter>
     </ClCompile>
   </ItemGroup>
@@ -212,7 +218,28 @@
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VelCompContext.h">
       <Filter>Header Files\Runtime</Filter>
     </ClInclude>
-    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\BaseAgentContext.h">
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VisElementDatabase.h">
+      <Filter>Header Files\Runtime</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VisElementException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\AgentContext\AgentContextDatabase.h">
+      <Filter>Header Files\Runtime\AgentContext</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\AgentContext\BaseAgentContext.h">
+      <Filter>Header Files\Runtime\AgentContext</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\MengeContext.h">
+      <Filter>Header Files\Runtime</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\AgentContext\ORCAAgentContext.h">
+      <Filter>Header Files\Runtime\AgentContext</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\AgentContext\ORCATypeAgentContext.h">
+      <Filter>Header Files\Runtime\AgentContext</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\AgentContext\PedVOAgentContext.h">
       <Filter>Header Files\Runtime\AgentContext</Filter>
     </ClInclude>
   </ItemGroup>
