--- a/projects/VS2013/Menge/MengeVis.vcxproj
+++ b/projects/VS2013/Menge/MengeVis.vcxproj
@@ -44,7 +44,7 @@
     <ClCompile Include="$(SrcDir)\MengeVis\Viewer\Watermark.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\FsmContext.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\StateContext.cpp" />
-    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VelCompContext.cpp" />
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VCContext\VelCompContext.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\AgentContextDatabase.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\AgentContext\BaseAgentContext.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\MengeContext.cpp" />
@@ -78,7 +78,7 @@
     <ClInclude Include="$(SrcDir)\MengeVis\Viewer\Watermark.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\FsmContext.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\StateContext.h" />
-    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VelCompContext.h" />
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VCContext\VelCompContext.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\VisConfig.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\AgentContext\AgentContextDatabase.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\AgentContext\BaseAgentContext.h" />
