[WIP] Initial implementation of velocity component contexts
The StateCOntext now initializes the velocitiy component and draws it.
Currently, there is only the default context.  And the default context
doesn't actually *draw* anything.

TODO:
1) Have default draw, at least, preferred velocity.
2) Translate all of the core velocity component contexts.

--- a/projects/VS2013/Menge/MengeVis.vcxproj
+++ b/projects/VS2013/Menge/MengeVis.vcxproj
@@ -48,6 +48,7 @@
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\AgentContextDatabase.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\AgentContext\BaseAgentContext.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\MengeContext.cpp" />
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VCContext\VelCompContextDatabase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\SimSystem.h" />
@@ -88,6 +89,7 @@
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\MengeContext.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VisElementDatabase.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VisElementException.h" />
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VCContext\VelCompContextDatabase.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{57FA5E04-F7D0-47B7-900D-CA2BA94E9D52}</ProjectGuid>
