--- a/projects/VS2013/Menge/MengeVis.vcxproj.filters
+++ b/projects/VS2013/Menge/MengeVis.vcxproj.filters
@@ -114,9 +114,6 @@
     <ClCompile Include="$(SrcDir)\MengeVis\Viewer\Watermark.cpp">
       <Filter>Source Files\Viewer</Filter>
     </ClCompile>
-    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\FsmContext.cpp">
-      <Filter>Source Files\Runtime</Filter>
-    </ClCompile>
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\StateContext.cpp">
       <Filter>Source Files\Runtime</Filter>
     </ClCompile>
@@ -147,8 +144,8 @@
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VCContext\RoadMapVCContext.cpp">
       <Filter>Source Files\Runtime\VCContext</Filter>
     </ClCompile>
-    <ClCompile Include="$(SrcDir)\Menge\MengeVis\Runtime\VCContext\VecFieldVCContext.cpp">
-      <Filter>Source Files\Runtime\VCContext</Filter>
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VCContext\VecFieldVCContext.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -232,9 +229,6 @@
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeVis\VisConfig.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\FsmContext.h">
-      <Filter>Header Files\Runtime</Filter>
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\StateContext.h">
       <Filter>Header Files\Runtime</Filter>
