--- a/projects/VS2013/Menge/MengeVis.vcxproj.filters
+++ b/projects/VS2013/Menge/MengeVis.vcxproj.filters
@@ -43,6 +43,12 @@
     <Filter Include="Source Files\Runtime\VCContext">
       <UniqueIdentifier>{02d61c87-5d5d-43eb-9cb8-6dc25f1ef082}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Runtime\GoalRenderer">
+      <UniqueIdentifier>{115974ab-5415-402e-8455-2e969968e48f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Runtime\GoalRenderer">
+      <UniqueIdentifier>{8af8a263-41e9-4b0c-a89c-7631e980146a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\SimSystem.cpp">
@@ -146,6 +152,21 @@
     </ClCompile>
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VCContext\VecFieldVCContext.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\GoalRendererDatabase.cpp">
+      <Filter>Source Files\Runtime\GoalRenderer</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\GoalRenderer.cpp">
+      <Filter>Source Files\Runtime\GoalRenderer</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\AABBGoalRenderer.cpp">
+      <Filter>Source Files\Runtime\GoalRenderer</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\OBBGoalRenderer.cpp">
+      <Filter>Source Files\Runtime\GoalRenderer</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\CircleGoalRenderer.cpp">
+      <Filter>Source Files\Runtime\GoalRenderer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -277,6 +298,24 @@
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VCContext\VecFieldVCContext.h">
       <Filter>Header Files\Runtime\VCContext</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\GoalRendererDatabase.h">
+      <Filter>Header Files\Runtime\GoalRenderer</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\GoalRenderer.h">
+      <Filter>Header Files\Runtime\GoalRenderer</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\AABBGoalRenderer.h">
+      <Filter>Header Files\Runtime\GoalRenderer</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\PointGoalRenderer.h">
+      <Filter>Header Files\Runtime\GoalRenderer</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\OBBGoalRenderer.h">
+      <Filter>Header Files\Runtime\GoalRenderer</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\CircleGoalRenderer.h">
+      <Filter>Header Files\Runtime\GoalRenderer</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
