Unify goals, goal factories, and goal renderers
They all now use a shared string identifier.

--- a/projects/VS2013/Menge/MengeVis.vcxproj
+++ b/projects/VS2013/Menge/MengeVis.vcxproj
@@ -58,6 +58,7 @@
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\GoalRenderer.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\GoalRendererDatabase.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\OBBGoalRenderer.cpp" />
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\PointGoalRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\SimSystem.h" />
