--- a/projects/VS2013/Menge/MengeVis.vcxproj.filters
+++ b/projects/VS2013/Menge/MengeVis.vcxproj.filters
@@ -49,6 +49,12 @@
     <Filter Include="Header Files\Runtime\GoalRenderer">
       <UniqueIdentifier>{8af8a263-41e9-4b0c-a89c-7631e980146a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\PluginEngine">
+      <UniqueIdentifier>{bfb6bdc2-24d1-416f-b686-874202f79ab1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\PluginEngine">
+      <UniqueIdentifier>{504f186f-9f07-46a5-8708-f76df94ef013}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\SimSystem.cpp">
@@ -170,6 +176,9 @@
     </ClCompile>
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\PointGoalRenderer.cpp">
       <Filter>Source Files\Runtime\GoalRenderer</Filter>
+    </ClCompile>
+    <ClCompile Include="$(SrcDir)\MengeVis\PluginEngine\VisPluginEngine.cpp">
+      <Filter>Source Files\PluginEngine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -319,6 +328,9 @@
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\CircleGoalRenderer.h">
       <Filter>Header Files\Runtime\GoalRenderer</Filter>
+    </ClInclude>
+    <ClInclude Include="$(SrcDir)\MengeVis\PluginEngine\VisPluginEngine.h">
+      <Filter>Header Files\PluginEngine</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
