Updating the cmake infrastructure

--- a/projects/g++/Menge/CMakeLists.txt
+++ b/projects/g++/Menge/CMakeLists.txt
@@ -10,14 +10,6 @@ link_directories (${LIBRARY_OUTPUT_PATH}/)
 #Where to find the header files
 INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/)
 INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/include)
-INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore)
-INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/BFSM)
-INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/viewer)
-INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/SceneGraph)
-INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/Math)
-INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/Agents)
-INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/Runtime)
-INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/PluginEngine)
 
 set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fpermissive -std=c++11" )
 set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11" )
@@ -30,44 +22,11 @@ if(OPENMP_FOUND)
     set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
-FIND_PACKAGE(SDL)
-if(NOT SDL_FOUND)
-	message(STATUS "I will try to link against local libraries")
-	INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/include)
-	LINK_DIRECTORIES  (${MENGE_SRC_DIR}/lib)
-	SET(SDL_LIBRARY "SDL")
-	SET(SDLMAIN_LIBRARY "SDLmain")
-else()
-	INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR})
-endif()
 
-FIND_PACKAGE(SDL_ttf)
-if(NOT SDLTTF_FOUND)
-	MESSAGE(STATUS "I will try to link against local libraries")
-	INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/include)
-	LINK_DIRECTORIES  (${MENGE_SRC_DIR}/lib)
-	SET(SDLTTF_LIBRARY "SDL_ttf")
-else()
-	INCLUDE_DIRECTORIES(${SDLTTF_INCLUDE_DIR})
-endif()
-
-FIND_PACKAGE(SDL_image)
-if(NOT SDLIMAGE_FOUND)
-	message(STATUS "I will try to link against local libraries")
-	INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/include)
-	LINK_DIRECTORIES  (${MENGE_SRC_DIR}/lib)
-	SET(SDLIMAGE_LIBRARY SDL_image)
-else()
-	INCLUDE_DIRECTORIES(${SDLIMAGE_INCLUDE_DIR})
-endif()
-
-FIND_PACKAGE(OpenGL REQUIRED)
-INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS})
-
-FIND_PACKAGE(PNG REQUIRED)
 
 ADD_SUBDIRECTORY(tinyxml)
 ADD_SUBDIRECTORY(MengeCore)
+ADD_SUBDIRECTORY(MengeVis)
 ADD_SUBDIRECTORY(mengeMain)
 
 file( 
