--- a/projects/g++/Plugins/AgtHelbing/CMakeLists.txt
+++ b/projects/g++/Plugins/AgtHelbing/CMakeLists.txt
@@ -17,4 +17,4 @@ add_library(
 	${source_files}
 )
 
-target_link_libraries (helbingPed mengeCore  ${OPENGL_LIBRARIES} ${SDL_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLTTF_LIBRARY} )
+target_link_libraries (helbingPed mengeCore )
