--- a/projects/g++/Plugins/AgtDummy/CMakeLists.txt
+++ b/projects/g++/Plugins/AgtDummy/CMakeLists.txt
@@ -17,5 +17,5 @@ add_library(
 	${source_files}
 )
 
-target_link_libraries (dummyPed mengeCore  ${OPENGL_LIBRARIES} ${SDL_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLTTF_LIBRARY} )
+target_link_libraries (dummyPed mengeCore )
 
