--- a/projects/g++/Plugins/FundamentalDiagram/CMakeLists.txt
+++ b/projects/g++/Plugins/FundamentalDiagram/CMakeLists.txt
@@ -18,5 +18,5 @@ add_library(
 	${source_files}
 )
 
-target_link_libraries (fundDiag mengeCore  ${OPENGL_LIBRARIES} ${SDL_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLTTF_LIBRARY} )
+target_link_libraries (fundDiag mengeCore )
 
