--- a/projects/g++/Plugins/aircraft/CMakeLists.txt
+++ b/projects/g++/Plugins/aircraft/CMakeLists.txt
@@ -18,5 +18,5 @@ add_library(
 	${source_files}
 )
 
-target_link_libraries (aircraft mengeCore  ${OPENGL_LIBRARIES} ${SDL_LIBRARY} ${SDLIMAGE_LIBRARY} ${SDLTTF_LIBRARY} )
+target_link_libraries (aircraft mengeCore )
 
