Initial patch to get new Menge to build on Linux
This was sufficient to get Menge to build with g++ 5.4

--- a/projects/g++/Menge/MengeVis/CMakeLists.txt
+++ b/projects/g++/Menge/MengeVis/CMakeLists.txt
@@ -58,4 +58,4 @@ add_library(
 
 target_link_libraries ( mengeVis  dl tinyxml ${OPENGL_LIBRARIES} ${SDL_LIBRARY} ${PNG_LIBRARY}  ${SDLIMAGE_LIBRARY}  ${SDLTTF_LIBRARY} )
 
-install( TARGETS mengeCore DESTINATION ${LIBRARY_OUTPUT_PATH} )
+install( TARGETS mengeVis DESTINATION ${LIBRARY_OUTPUT_PATH} )
