Another round of mac osx build fixes
1) More >> issues with nested templates.
2) the MengeVis build wasn't linked against mengeCore.

--- a/projects/g++/Menge/MengeVis/CMakeLists.txt
+++ b/projects/g++/Menge/MengeVis/CMakeLists.txt
@@ -56,6 +56,6 @@ add_library(
 	${source_files}
 )
 
-target_link_libraries ( mengeVis  dl tinyxml ${OPENGL_LIBRARIES} ${SDL_LIBRARY} ${PNG_LIBRARY}  ${SDLIMAGE_LIBRARY}  ${SDLTTF_LIBRARY} )
+target_link_libraries ( mengeVis mengeCore dl tinyxml ${OPENGL_LIBRARIES} ${SDL_LIBRARY} ${PNG_LIBRARY}  ${SDLIMAGE_LIBRARY}  ${SDLTTF_LIBRARY} )
 
 install( TARGETS mengeVis DESTINATION ${LIBRARY_OUTPUT_PATH} )
