Agent plugins with agent contexts link against mengeVis
Missing link dependencies

--- a/projects/g++/Plugins/AgtHelbing/CMakeLists.txt
+++ b/projects/g++/Plugins/AgtHelbing/CMakeLists.txt
@@ -17,4 +17,4 @@ add_library(
 	${source_files}
 )
 
-target_link_libraries (helbingPed mengeCore )
+target_link_libraries (helbingPed mengeCore mengeVis )
