--- a/doc/Plugins.cfg
+++ b/doc/Plugins.cfg
@@ -2011,7 +2011,8 @@ SKIP_FUNCTION_MACROS   = YES
 # the path). If a tag file is not located in the directory in which doxygen is
 # run, you must also specify the path to the tagfile here.
 
-TAGFILES               =  doc/tags/menge.tag=../../menge/html
+TAGFILES               =  doc/tags/MengeCode.tag \
+						  doc/tags/MengeVis.tag
 
 # When a file name is specified after GENERATE_TAGFILE, doxygen will create a
 # tag file that is based on the input files it reads. See section "Linking to
