--- a/doc/MengeFull.cfg
+++ b/doc/MengeFull.cfg
@@ -755,7 +755,36 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 
 INPUT                  = src/Menge/MengeCore \
-                         src/Menge/mengeMain
+						 src/Menge/MengeVis \
+						 src/Menge/mengeMain \
+						 src/Plugins \
+						 doc/mengeDetails/mainpage.md \
+						 doc/mengeDetails/sceneSpec.md \
+						 doc/mengeDetails/behaveSpec.md \		
+						 doc/mengeDetails/viewSpec.md \
+						 doc/mengeDetails/outSpec.md \
+						 doc/mengeDetails/extendInstructions.md \
+						 doc/mengeDetails/impl_pedModel.md \	
+						 doc/mengeDetails/elements.md \
+						 doc/mengeDetails/elements/agentGen.md \
+						 doc/mengeDetails/elements/profileSelect.md \
+						 doc/mengeDetails/elements/stateSelect.md \
+						 doc/mengeDetails/elements/elevation.md \
+						 doc/mengeDetails/elements/obstacleSet.md \
+						 doc/mengeDetails/elements/spaceQuery.md \
+						 doc/mengeDetails/elements/tasks.md \
+						 doc/mengeDetails/elements/actions.md \
+						 doc/mengeDetails/elements/events.md \
+						 doc/mengeDetails/elements/goalSelect.md \
+						 doc/mengeDetails/elements/transition.md \
+						 doc/mengeDetails/elements/velComp.md \
+						 doc/mengeDetails/elements/velMod.md \
+						 doc/mengeDetails/elements/goals.md \
+						 doc/mengeDetails/architecture.md \
+						 doc/mengeDetails/commandLine.md \
+						 doc/mengeDetails/examples.md \
+						 doc/mengeDetails/projSpec.md \
+						 doc/mengeDetails/distribution.md
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -775,7 +804,7 @@ INPUT_ENCODING         = UTF-8
 # *.md, *.mm, *.dox, *.py, *.f90, *.f, *.for, *.tcl, *.vhd, *.vhdl, *.ucf,
 # *.qsf, *.as and *.js.
 
-FILE_PATTERNS          =
+FILE_PATTERNS          = *.h
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
 # be searched for input files as well.
@@ -843,7 +872,7 @@ EXAMPLE_RECURSIVE      = NO
 # that contain images that are to be included in the documentation (see the
 # \image command).
 
-IMAGE_PATH             =
+IMAGE_PATH             =	doc/images
 
 # The INPUT_FILTER tag can be used to specify a program that doxygen should
 # invoke to filter for each input file. Doxygen will invoke the filter program
@@ -891,7 +920,7 @@ FILTER_SOURCE_PATTERNS =
 # (index.html). This can be useful if you have a project on for instance GitHub
 # and want to reuse the introduction page also for the doxygen output.
 
-USE_MDFILE_AS_MAINPAGE = 
+USE_MDFILE_AS_MAINPAGE = doc/mainpage.md
 
 #---------------------------------------------------------------------------
 # Configuration options related to source browsing
@@ -2000,13 +2029,13 @@ SKIP_FUNCTION_MACROS   = YES
 # the path). If a tag file is not located in the directory in which doxygen is
 # run, you must also specify the path to the tagfile here.
 
-TAGFILES               =
+TAGFILES               = 
 
 # When a file name is specified after GENERATE_TAGFILE, doxygen will create a
 # tag file that is based on the input files it reads. See section "Linking to
 # external documentation" for more information about the usage of tag files.
 
-GENERATE_TAGFILE       = doc/tags/MengeCode.tag
+GENERATE_TAGFILE       = 
 
 # If the ALLEXTERNALS tag is set to YES all external class will be listed in the
 # class index. If set to NO only the inherited external classes will be listed.
